--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "npx npm-run-all --parallel reload serve"
   },
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "nodemon": "^1.19.1",
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
     "html-template-tag": "^3.1.0",
